--- a/comite.html
+++ b/comite.html
@@ -75,6 +75,11 @@
 
         
           </section>
+
+
+          <hr>
+            <h1 >GALERIA </h1>
+
         
           <footer>
               <section>
