--- a/comite.html
+++ b/comite.html
@@ -60,17 +60,17 @@
             <br>
                      <span>
 
-                            <img src="imagenes/1ganador.jfif"   >
+                            <img src="imagenes/1ganador.jfif " align = width="400px" height="350px" border="2"   >
                      </span>
 
                      <span>
 
-                            <img src="imagenes/2ganador.jfif">
+                            <img src="imagenes/2ganador.jfif" align = width="400px" height="350px" border="2">
                      </span>
 
                      <span>
 
-                            <img src="imagenes/3ganador.jfif">
+                            <img src="imagenes/3ganador.jfif" align = width="400px" height="350px" border="2">
                      </span>
 
         
