--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </footer>
 
 
-        <a href="RepasoExamen/rss.xml">Mi canal de RSS</a>
+        <a href="rss.xml">Mi canal de RSS</a>
 
 
 
