--- a/index.html
+++ b/index.html
@@ -111,15 +111,14 @@
 
       </section>
 
-
-      
-
+<div>
+      <a href="rss.xml">Mi canal de RSS</a>
+    </div>
   </footer>
 
-<br>
-        <a href="rss.xml">Mi canal de RSS</a>
+       
 
-<br>
+
 
 
 
