--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <br><br>
     <br>
    
-        <a href="rss.xml">Mi canal de RSS<img src="Imagenes/rss.jpg" width="50px" border="2"></a>
+        <a href="rss.xml">Mi canal de RSS<img src="Imagenes/rss.jpg" width="50px"></a>
  
 
 </body>
