--- a/calendario.html
+++ b/calendario.html
@@ -155,7 +155,7 @@
          
               <a href="rss.xml">Mi canal de RSS<img src="Imagenes/rss.jpg" width="50px"></a>
               <a href="AtomReyes.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
-      
+              <a href="AtomBasico.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
 
 </body>
 </html>
