--- a/contacto.html
+++ b/contacto.html
@@ -172,7 +172,7 @@
               <br><br>
               <a href="AtomReyes.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
               <br><br>
-              <a href="AtomBasico.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
+              <a href="AtomBasico.atom">Mi canal de ATOM Básico<img src="Imagenes/atom.jfif" width="50px"></a>
 
 </body>
 </html>
