--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
         <br><br>
         <a href="AtomReyes.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
         <br><br>
-        <a href="AtomBasico.atom">Mi canal de ATOM<img src="Imagenes/atom.jfif" width="50px"></a>
+        <a href="AtomBasico.atom">Mi canal de ATOM Básico<img src="Imagenes/atom.jfif" width="50px"></a>
 </body>
 </html>
